--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "sass": "^1.27.0"
   },
   "devDependencies": {
