--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "cross-env PORT=3000 && next dev",
+    "export": "next build && next export",
     "lint": "eslint . --ext .ts --ext .tsx",
     "start": "next start"
   },
@@ -15,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "clsx": "^1.1.1",
+    "framer-motion": "^2.9.4",
     "next": "10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
