add contact info + serve fonts locally

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_RECAPTCHA_KEY=your_recaptcha_key
+NEXT_PUBLIC_MAPS_API_KEY=your_google_maps_key
 NEXT_PUBLIC_CONTACT_URL=/api/contact
 NEXT_PUBLIC_JOB_APPLICATION_URL=/api/jobs
