--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "@react-google-maps/api": "^1.13.0",
     "clsx": "^1.1.1",
     "framer-motion": "^2.9.4",
     "next": "10.0.0",
